service.yaml

apiVersion: v1
kind: Service
metadata:
  name: bff-cms-service
  namespace: investment=module
  labels:
    app: bff-cms-service
spec:
  selector:
    app: bff-cms-service
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
